// 指定的当前proto语法的版本，有2和3
syntax = "proto3";
//导入其他proto文件,具体路径需要从执行proto这个命令的当前目录算起
import "Pbfile/user.proto";

//option go_package = "path;name"; path 表示生成的go文件的存放地址，会自动生成目录的
// name 表示生成的go文件所属的包名
option go_package="../service";
// 指定等会文件生成出来的package
package service;
//// 定义request model
message ProductRequest{
  int32 prod_id = 1; // 1代表顺序
}
// 定义response model
message ProductResponse{
  int32 prod_stock = 1; // 1代表顺序
  User user=2;
}

// 定义服务主体
service ProdService{
  // 定义方法
  rpc GetProductStock(ProductRequest) returns(ProductResponse);
  //客户端流式 RPC
  rpc UpdateProductStockClientStream( stream ProductRequest) returns(ProductResponse);
  //服务端流式 RPC
  rpc GetProductStockServerStream(  ProductRequest) returns(stream ProductResponse);
}